[package]
name = "butterfly-fuzz"
version = "0.3.0"
edition = "2021"
authors = ["Patrick D."]
description = "LibAFL components for stateful fuzzing"
readme = "README.md"
repository = "https://github.com/fkie-cad/butterfly"
license = "MIT"
keywords = ["libafl", "fuzzing", "security", "stateful"]
include = [
    "src/*",
    "Cargo.toml",
    "README.md",
]

[dependencies]
libafl = { version = "0.15.2", features = ["default", "introspection"] }
libafl_bolts = { version = "0.15.2" }
pcap = { version = "2.2" }
serde = "1.0"
ahash = "0.7"

[features]
default = ["graphviz"]

# Enables the GraphvizMonitor
graphviz = []

# Replace performance-optimized unsafe operations
# with slightly slower but safe operations
safe_only = []

[package.metadata.docs.rs]
all-features = true

[lib]
doctest = false
