[package]
name = "minimal_ftp_fuzzer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
debug = true

[dependencies]
libafl = { version = "0.15", git = "https://github.com/nathaniel-bennett/LibAFL", features = ["default", "introspection"] }
libafl_bolts = { version = "0.15", git = "https://github.com/nathaniel-bennett/LibAFL" }
butterfly = { path = "../../", package = "butterfly-fuzz", features = ["graphviz"] }
serde = "1.0"
pcap = { version = "2.2" }
etherparse = "0.11"
